# senior_project

./: .gitignore  README.md  _config.yml  assign_apriltag.py  autonomous-robot-triage.md  barterbuddy.md  button_press.py  casualty.py  chat429.md  commands.txt  create_reports.py  finalize_predictions.py  gui.py  index.markdown  index.md  model_configs.json  pick_image.py  pin_apriltag.py  predict.py  prediction_timer.py  projects.md  publish_test_predictions.py  publish_test_reprots.py  send_report.py  send_reports.py  senior_project.md  timer.py  vote_and_create_reports.py  yoloV8.py  yolov8.py
_includes/: header.html
_posts/: 2024-11-02-welcome-to-jekyll.markdown
apriltag_detection/apriltag_ros/: CMakeCache.txt  CTestConfiguration.ini
apriltag_detection/apriltag_ros/atomic_configure/: .rosinstall
apriltag_detection/apriltag_ros/catkin_generated/: generate_cached_setup.py  setup_cached.sh
apriltag_detection/apriltag_ros/config/: tags.yaml
apriltag_detection/apriltag_ros/devel/: .catkin  local_setup.sh
code/: .gitignore  commands.txt  model.py  publish_test_reports.py  trigger_detection.py
code/apriltag_ros/devel/: setup.sh
code/components/: MainWindow.py  ReportListWidget.py  TitleLabel.py  VideoView.py  __init__.py
components/: ApriltagDetectionsWidget.py  BodyLabel.py  CardWidget.py  List.py  LogWidget.py  MainWindow.py  PredictionWidget.py  ReportList.py  ReportListWidget.py  ReportWidget.py  TitleLabel.py  VideoView.py  __init__.py
data_prep_scripts/create_test_train_v8/: create  create_txt.go
data_prep_scripts/get_type_count/: go.mod
data_prep_scripts/reindex_labels/: .gitignore  go.mod  reindex.go
data_prep_scripts/rename_data/: go.mod  rename.go  rename_data
desktop_app/: gui.py  gui2.py
desktop_app/components/: BodyLabel.py  CardWidget.py  CardWidgetOld.py  CustomLabel.py  LogWidget.py  MainWindow.py  MainWindow2.py  PredictionWidget.py  TitleLabel.py  VideoDisplay.py  __init__.py
messages/: CMakeLists.txt  package.xml
messages/msg/: Assigned_apriltag.msg  Casualty_prediction.msg  Command.msg  Critical.msg  Critical_report_response.msg  Current_timer.msg  Injury.msg  Injury_report.msg  Injury_report_response.msg  LoopState.msg  ModelPredictionStatus.msg  ModelPredictionStatuses.msg  Pinned_apriltag.msg  Prediction.msg  Prediction_element.msg  Remaining_reports.msg  Response_status.msg  Status.msg  Timer_status.msg  Vitals.msg  Vitals_report.msg  Vitals_report_response.msg
(+17 files in other folders)
