<?xml version="1.0"?>
<package>
  <name>messages</name>
  <version>0.0.1</version>
  <description>Custom messages for DTC</description>

  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <export>

  </export>
</package>